--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -41,7 +41,7 @@
   <div class="profileHeader">
     <div class="profileHeaderLeft">
       <h1><%= @profile.user.display_name %></h1>
-      <p class="textGray"><%= @profile.profession %>, <%= @profile.location %></p>
+      <p class="textLightBlack"><%= @profile.profession %>, <%= @profile.location %></p>
     </div>
     <div class="profileHeaderRight">
       <div class="flex items-center justify-content-end mt-3">
@@ -98,7 +98,7 @@
   <!-- Skills -->
   <div class="container">
     <div class="profileSection p-3" id="skills">
-      <h3 class="small mb-2 mt-0 semi-bold textBetween textGray">KEY SKILLS</h3>
+      <h3 class="small mb-2 mt-0 semi-bold textBetween textLightBlack">KEY SKILLS</h3>
       <div class="flex justify-content-start skill-pills mb-2">
         <% @profile.skill_list.each do |skill| %>
           <span class="skill-pill"><%= skill %></span>
