--- a/app/views/profiles/_notes_content.html.erb
+++ b/app/views/profiles/_notes_content.html.erb
@@ -40,7 +40,7 @@
 
 <% if user_signed_in? && current_user.manager? %>
   <div class="form-wrapper px-3 pb-3">
-    <p class="text-center uppercase mt-0 mb-3 textBetween textLightBlack semi-bold">Star ratings are visible on Gauthiers profile</p>
+    <p class="text-center uppercase mt-0 mb-3 textBetween textLightBlack semi-bold">Star ratings are visible on <%= @profile.user.first_name %>'s profile</p>
     <div id="rating-form-container">
       <% if @my_rating %>
         <%= render partial: "ratings/update_form", locals: { rating: @my_rating } %>
