--- a/app/views/shared/_manager_invite_modal.html.erb
+++ b/app/views/shared/_manager_invite_modal.html.erb
@@ -1,7 +1,7 @@
 <div class="invitationsWrapper p-3">
   <div class="invitations-overlay"></div>
   <div class="fakeModal py-3">
-    <%= link_to profiles_path do %>
+    <%= link_to "#", id: "closeInvitationsWrapper" do %>
       <%= image_tag "icons/cross.svg", alt: "cross", class: "close-fake-modal", width: 18, height: 18 %>
     <% end %>
     <h1 class="text-center textLg mt-4">Email invites</h1>
