--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -39,11 +39,18 @@
           <!-- Start time and end time OR duration input -->
           <div class="bookingHours w-100">
             <div class="bookingSpecific">
-              <label class="block textLightBlack nowrap">Hours per day</label>
-              <div class="inputs flex items-center">
-                <%= f.input :start_time, label: false, label_html: { class: "block textLightBlack nowrap" }, input_html: { class: "w-100 start-timepicker border-box" }, as: :string %>
-                <span class="self-centered mx-2"> - </span>
-                <%= f.input :end_time, label: false, input_html: { class: "w-100 end-timepicker border-box" }, as: :string %>
+              <label class="block textGray nowrap">Hours per day</label>
+              <input id="job_time" />
+              <div class="inputs flex items-center relative">
+                <%= f.input :start_time, label: false,
+                            label_html: { class: "block textGray nowrap" },
+                            input_html: { class: "mb-2 w-100 start-timepicker" },
+                            wrapper_html: { class: "none" },
+                            as: :string %>
+                <%= f.input :end_time, label: false,
+                            input_html: { class: "mb-2 w-100 end-timepicker" },
+                            wrapper_html: { class: "none" },
+                            as: :string %>
               </div>
             </div>
 
