--- a/app/views/shared/_manager_invite_modal.html.erb
+++ b/app/views/shared/_manager_invite_modal.html.erb
@@ -1,4 +1,4 @@
-<div class="invitationsWrapper p-3">
+<div class="invitationsWrapper p-3 none">
   <div class="invitations-overlay"></div>
   <div class="fakeModal py-3">
     <%= link_to "#", id: "closeInvitationsWrapper" do %>
