--- a/app/assets/stylesheets/pages/_jobs_new.scss
+++ b/app/assets/stylesheets/pages/_jobs_new.scss
@@ -45,6 +45,10 @@
 		}
 	}
 
+	.weekends-contain {
+		margin-top: calc(#{$spacing-2} + #{$spacing-3});
+	}
+
 	@media only screen and (max-width: 360px) {
 		.dates-input-wrapper {
 			width: 145px;
