--- a/app/views/shared/_checkbox.html.erb
+++ b/app/views/shared/_checkbox.html.erb
@@ -3,9 +3,9 @@
     <%= label %>
   <% end %>
   <% if active %>
-    <input type="checkbox" name="<%= name %>" class="mr-2" checked="checked">
+    <input type="checkbox" name="<%= name %>" class="mr-2" checked="checked" id="<%= id %>">
   <% else %>
-    <input type="checkbox" name="<%= name %>" class="mr-2">
+    <input type="checkbox" name="<%= name %>" class="mr-2" id="<%= id %>">
   <% end %>
   <span class="checkmark">
     <svg width="15" height="11" viewBox="0 0 15 11" fill="none" xmlns="http://www.w3.org/2000/svg">
