--- a/app/assets/stylesheets/pages/_bookings_new.scss
+++ b/app/assets/stylesheets/pages/_bookings_new.scss
@@ -1,10 +1,18 @@
-.profileAvatar {
-	height: 32px;
-	width: 32px;
-	background-size: cover;
-	background-position: center;
-}
+#bookings-new {
+	.profileAvatar {
+		height: 32px;
+		width: 32px;
+		background-size: cover;
+		background-position: center;
+	}
 
-#booking-price {
-  max-width: 100px !important;
+	#booking-price {
+		max-width: 100px !important;
+	}
+
+	.dates-selector {
+		.weekends-contain {
+			margin-top: calc(#{$spacing-2} + #{$spacing-3});
+		}
+	}
 }
