--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,109 +1,112 @@
-
-<section class="mx-3 mt-4 flex justify-content-between items-center">
-  <%= link_to(@profile.persisted? ? profile_path(@profile) : dashboard_path) do %>
-    <%= image_tag "icons/cross.svg", alt: "exit", class: "icon", height: 16, width: 16 %>
-  <% end %>
-  <p class="textDarkGray">NEW BOOKING</p>
-  <%= image_tag "icons/more.svg", alt: "more", class: "icon more opaque", height: 24, width: 24 %>
-</section>
-
-<% unless @select %>
-  <section class="flex items-center p-3">
-    <% if @profile.user.avatar.attached? %>
-      <div class="profileAvatar rounded-square" style="background-image: url(<%= @profile.user.avatar.service_url %>)">
-      </div>
-    <% else %>
-      <%= image_tag "https://png.pngtree.com/png-clipart/20190520/original/pngtree-vector-users-icon-png-image_4144740.jpg", alt: "alttext", class: "profileAvatar rounded-square", height: 80, width: 80 %>
+<div id="bookings-new">
+  <section class="mx-3 mt-4 flex justify-content-between items-center">
+    <%= link_to(@profile.persisted? ? profile_path(@profile) : dashboard_path) do %>
+      <%= image_tag "icons/cross.svg", alt: "exit", class: "icon", height: 16, width: 16 %>
     <% end %>
-    <div>
-      <p class="my-0 mx-3"><strong><%= @profile.user.display_name %></strong></p>
-      <p class="textGray my-0 mx-3"><%= @profile.profession %>, <%= @profile.location %></p>
-    </div>
+    <p class="textDarkGray">NEW BOOKING</p>
+    <%= image_tag "icons/more.svg", alt: "more", class: "icon more opaque", height: 24, width: 24 %>
   </section>
-<% end %>
 
-<div id="new-booking" class="flex justify-content-center p-3">
-  <div class="bookingCard">
-    <% url = @select ? profile_bookings_path("no_profile", select: true) : profile_bookings_path(@profile) %>
-    <%= simple_form_for [Profile.new, @booking], url: url do |f| %>
-      <% if @select %>
-        <%= f.input :profile_id, collection: @network.map { |profile| [profile.user.display_name, profile.id] },
-                    label: "Freelancer",
-                    label_html: { class: "block textGray" },
-                    input_html: { class: "mb-2 w-100" } %>
-        <% end %>
-      <%= f.input :title, label: "Project / Client", label_html: { class: "block textGray" }, input_html:{class: "mb-2 w-100"} %>
-      <%= f.input :description, label_html: { class: "block textGray" }, input_html:{class: "mb-2 w-100"} %>
+  <% unless @select %>
+    <section class="flex items-center p-3">
+      <% if @profile.user.avatar.attached? %>
+        <div class="profileAvatar rounded-square" style="background-image: url(<%= @profile.user.avatar.service_url %>)">
+        </div>
+      <% else %>
+        <%= image_tag "https://png.pngtree.com/png-clipart/20190520/original/pngtree-vector-users-icon-png-image_4144740.jpg", alt: "alttext", class: "profileAvatar rounded-square", height: 80, width: 80 %>
+      <% end %>
+      <div>
+        <p class="my-0 mx-3"><strong><%= @profile.user.display_name %></strong></p>
+        <p class="textGray my-0 mx-3"><%= @profile.profession %>, <%= @profile.location %></p>
+      </div>
+    </section>
+  <% end %>
 
-      <div class="flex justify-content-between items-center flex-shrink-2">
+  <div id="new-booking" class="flex justify-content-center p-3">
+    <div class="bookingCard">
+      <% url = @select ? profile_bookings_path("no_profile", select: true) : profile_bookings_path(@profile) %>
+      <%= simple_form_for [Profile.new, @booking], url: url do |f| %>
+        <% if @select %>
+          <%= f.input :profile_id, collection: @network.map { |profile| [profile.user.display_name, profile.id] },
+                      label: "Freelancer",
+                      label_html: { class: "block textGray" },
+                      input_html: { class: "mb-2 w-100" } %>
+          <% end %>
+        <%= f.input :title, label: "Project / Client", label_html: { class: "block textGray" }, input_html:{class: "mb-2 w-100"} %>
+        <%= f.input :description, label_html: { class: "block textGray" }, input_html:{class: "mb-2 w-100"} %>
 
-        <!-- Start time and end time OR duration input -->
-        <div class="bookingHours w-100">
-          <div class="bookingSpecific">
-            <label class="block textGray nowrap">Hours per day</label>
-            <input id="booking_time" />
-            <div class="inputs flex items-center relative">
-              <%= f.input :start_time, label: false,
-                          label_html: { class: "block textGray nowrap" },
-                          input_html: { class: "mb-2 w-100 start-timepicker" },
-                          wrapper_html: { class: "none" },
-                          as: :string %>
-              <%= f.input :end_time, label: false,
-                          input_html: { class: "mb-2 w-100 end-timepicker" },
-                          wrapper_html: { class: "none" },
-                          as: :string %>
+        <div class="flex justify-content-between items-center flex-shrink-2">
+
+          <!-- Start time and end time OR duration input -->
+          <div class="bookingHours w-100">
+            <div class="bookingSpecific">
+              <label class="block textGray nowrap">Hours per day</label>
+              <input id="booking_time" />
+              <div class="inputs flex items-center relative">
+                <%= f.input :start_time, label: false,
+                            label_html: { class: "block textGray nowrap" },
+                            input_html: { class: "mb-2 w-100 start-timepicker" },
+                            wrapper_html: { class: "none" },
+                            as: :string %>
+                <%= f.input :end_time, label: false,
+                            input_html: { class: "mb-2 w-100 end-timepicker" },
+                            wrapper_html: { class: "none" },
+                            as: :string %>
+              </div>
+            </div>
+
+            <!-- Hidden duration -->
+            <div class="bookingDuration none">
+              <%= f.input :duration, label_html: { class: "block textGray" }, input_html:{class: "mb-2 w-100"}, label: "Hours per day" %>
             </div>
           </div>
+          <!-- End of left side -->
 
-          <!-- Hidden duration -->
-          <div class="bookingDuration none">
-            <%= f.input :duration, label_html: { class: "block textGray" }, input_html:{class: "mb-2 w-100"}, label: "Hours per day" %>
+        <!-- Duration toggler -->
+        <div class="profileTabs flex-grow-1 textSm mr-0" id="tabs">
+          <%= link_to "Duration", "#", id: "duration", class: "tab p-2", data: { turbolinks: false } %>
+          <%= link_to "Specific", "#", id: "specific", class: "tab p-2 active", data: { turbolinks: false } %>
+        </div>
+
+
+        </div>
+
+        <!-- Dates input -->
+        <div class="flex items-center justify-content-between">
+
+          <div class="dates-input-wrapper">
+            <label for="dates" class="block textGray">Dates</label>
+            <input id="new-booking-datepickr" type="text" name="dates" class="mb-2 w-100 datepicker">
+          </div>
+
+          <div>
+            <%= render partial: "shared/checkbox", locals: { label: "Incl. weekends", name: "booking[weekends]", active: @booking.weekends, id: "booking_weekends" } %>
           </div>
         </div>
-        <!-- End of left side -->
 
-      <!-- Duration toggler -->
-      <div class="profileTabs flex-grow-1 textSm mr-0" id="tabs">
-        <%= link_to "Duration", "#", id: "duration", class: "tab p-2", data: { turbolinks: false } %>
-        <%= link_to "Specific", "#", id: "specific", class: "tab p-2 active", data: { turbolinks: false } %>
-      </div>
+        <!-- Hidden inputs for start and end dates -->
+        <%= f.input :start_date, label: "sd", label_html: { class: "block textGray" }, input_html:{class: "mb-2 w-100"}, as: :hidden %>
 
+        <%= f.input :end_date, label: "ed", input_html:{class: "mb-2 w-100"}, as: :hidden %>
 
-      </div>
-
-      <!-- Dates input -->
-      <div class="flex items-end justify-content-between">
-
-        <div class="dates-input-wrapper">
-          <label for="dates" class="block textGray">Dates</label>
-          <input id="new-booking-datepickr" type="text" name="dates" class="mb-2 w-100 datepicker">
+        <!-- Billable input -->
+        <div class="flex">
+          <%= render partial: "shared/checkbox", locals: { label: "Billable", name: "booking[billable]", active: @booking.billable, id: "booking_billable_true" } %>
         </div>
 
-        <div>
-          <%= f.input :weekends, label: "Incl. weekends", input_html: { class: "mr-2 big" }, label_html: { class: "block textGray nowrap flex items-center" }, wrapper_html: { class: "flex flex-row-reverse items-center mb-2"} %>
+        <!-- Price section -->
+        <div id="priceSection" class="flex justify-content-between items-center <%= 'none' unless @booking.billable %> mb-2">
+          <%= f.input :price, label: false, placeholder: "Ex: $250", label_html: { class: "block textGray" }, input_html:{class: "w-100"}, wrapper_html: { class: "mr-2 flex-shrink-2" } %>
+          <%= f.input :price_type, label: false, label_html: { class: "block textGray" }, collection: Booking::PRICE_TYPES, input_html:{class: "w-100"}, wrapper_html: { class: "mr-3" }  %>
+          <p class="textGray my-0" id="totalPrice" data-preferred-currency="<%= currency_mapper(current_user.preferred_currency) %>"> Total: <%= currency_mapper(current_user.preferred_currency) %> 1,000</p>
         </div>
-      </div>
+        <%= f.input :attachments, label_html: { class: "choose-file textGray" }, as: :file, input_html: { multiple: true, class: "none" }, label: "#{image_tag("icons/paperclip", alt: "paperclip")} ADD ATTACHMENT".html_safe %>
 
-      <!-- Hidden inputs for start and end dates -->
-      <%= f.input :start_date, label: "sd", label_html: { class: "block textGray" }, input_html:{class: "mb-2 w-100"}, as: :hidden %>
-
-      <%= f.input :end_date, label: "ed", input_html:{class: "mb-2 w-100"}, as: :hidden %>
-
-      <!-- Billable input -->
-      <%= f.input :billable, label_html: { class: "block textGray" }, as: :check_boxes, collection: [["", true ]], input_html:{class: "mb-2"}, wrapper_html: { class: "flex flex-row-reverse justify-content-end my-2" }, include_hidden: false %>
-
-      <!-- Price section -->
-      <div id="priceSection" class="flex justify-content-between items-center <%= 'none' unless @booking.billable %> mb-2">
-        <%= f.input :price, label: false, placeholder: "Ex: $250", label_html: { class: "block textGray" }, input_html:{class: "w-100"}, wrapper_html: { class: "mr-2 flex-shrink-2" } %>
-        <%= f.input :price_type, label: false, label_html: { class: "block textGray" }, collection: Booking::PRICE_TYPES, input_html:{class: "w-100"}, wrapper_html: { class: "mr-3" }  %>
-        <p class="textGray my-0" id="totalPrice" data-preferred-currency="<%= currency_mapper(current_user.preferred_currency) %>"> Total: <%= currency_mapper(current_user.preferred_currency) %> 1,000</p>
-      </div>
-      <%= f.input :attachments, label_html: { class: "choose-file textGray" }, as: :file, input_html: { multiple: true, class: "none" }, label: "#{image_tag("icons/paperclip", alt: "paperclip")} ADD ATTACHMENT".html_safe %>
-
-      <%= f.button :button, class: "btn btn-primary w-100 my-3 send-request" do %>
-        <%= image_tag("icons/paperplane", alt: "paperplane") %>
-        SEND REQUEST
+        <%= f.button :button, class: "btn btn-primary w-100 my-3 send-request" do %>
+          <%= image_tag("icons/paperplane", alt: "paperplane") %>
+          SEND REQUEST
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
 </div>
