--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="<%= yield :body_class %>">
     <%= render 'shared/flashes' %>
     <div class="yielded-content">
       <div class="<%= current_page?('/') ? 'home-contained' : 'contained' %>">
