--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -39,6 +39,7 @@
         </div>
         <div class="bookingDuration none">
           <%= f.input :duration,
+                      label: "Hours per day",
                       wrapper_html: { class: "flex flex-column" } %>
         </div>
         <div class="profileTabs flex-grow-1 textSm mr-0" id="tabs">
