--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -57,7 +57,7 @@
 
             <!-- Hidden duration -->
             <div class="bookingDuration none">
-              <%= f.input :duration, label_html: { class: "block textLightBlack" }, input_html:{class: "w-100"} %>
+              <%= f.input :duration, label: "Hours per day", label_html: { class: "block textLightBlack" }, input_html:{class: "w-100"} %>
             </div>
           </div>
           <!-- End of left side -->
