--- a/app/views/profiles/_card.html.erb
+++ b/app/views/profiles/_card.html.erb
@@ -19,7 +19,7 @@
       <% end %>
     <% end %>
 
-    <button class="action"><%= image_tag "icons/more-gray.svg", alt: "more", class: "icon" %></button>
+    <button class="action opaque"><%= image_tag "icons/more-gray.svg", alt: "more", class: "icon" %></button>
   </div>
   <div class="bottom flex-grow-1 flex flex-column justify-content-between">
     <div class="bottom-top flex-grow-1">
