--- a/app/assets/stylesheets/components/_flashes.scss
+++ b/app/assets/stylesheets/components/_flashes.scss
@@ -1,19 +1,20 @@
 .alert {
-    text-transform: uppercase;
-    position: fixed;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding: 8px;
-    z-index: 4;
-  &.alert-warning {
-    background-color: $flat-red;
-    color: $wine-red;
-  }
+	@extend .mb-3;
 
-  &.alert-info {
-    background-color: $flat-green-5;
-    color: $leaf-green;
-  }
+	text-transform: uppercase;
+	position: fixed;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	padding: $spacing-4 $spacing-2 $spacing-2 $spacing-2;
+	z-index: 4;
+	&.alert-warning {
+		background-color: $flat-red;
+		color: $wine-red;
+	}
 
+	&.alert-info {
+		background-color: $flat-green-5;
+		color: $leaf-green;
+	}
 }
