--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,5 +1,5 @@
 <div id="dashboardPage" class="mx-3">
-  <div class="head mb-3 flex justify-content-between items-center">
+  <div class="head mb-3 flex justify-content-between items-center <%= "mt-3" if notice || alert %>">
     <%# DON'T REMOVE %>
     <div style="width: 32px;"></div>
     <h1>Hello <%= current_user.first_name %></h1>
