--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -266,6 +266,8 @@ $day-border: 1px solid #e8e9eb;
 						background: $flat-orange-5;
 						border-top: 8px solid $flat-orange-3;
 						margin-right: -2px;
+						-ms-overflow-style: none; /* IE and Edge */
+						scrollbar-width: none; /* Firefox */
 
 						.event-details {
 							@extend .absolute;
@@ -273,6 +275,10 @@ $day-border: 1px solid #e8e9eb;
 							white-space: nowrap;
 							background: $flat-orange-5;
 							z-index: 1;
+
+							&::-webkit-scrollbar {
+								display: none;
+							}
 						}
 
 						&.red {
