--- a/app/assets/stylesheets/pages/_booking_edit.scss
+++ b/app/assets/stylesheets/pages/_booking_edit.scss
@@ -2,7 +2,6 @@
 	#booking_start_time,
 	#booking_end_time {
 		width: 80px;
-		height: 24px;
 	}
 
 	#booking_duration {
@@ -14,9 +13,9 @@
 	}
 
 	#tabs {
-		@extend .rounded;
+		@extend .rounded, .border-box;
 
-		height: 32px;
+		height: 40px;
 
 		.tab {
 			padding-top: unset !important;
