--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -89,6 +89,11 @@ $day-border: 1px solid #e8e9eb;
 			width: 100%;
 			background: white;
 			z-index: 1;
+
+			#booking_start_time,
+			#booking_end_time {
+				width: 80px;
+			}
 		}
 
 		.calendarContainer {
