--- a/app/assets/stylesheets/components/_archive.scss
+++ b/app/assets/stylesheets/components/_archive.scss
@@ -1,3 +1,5 @@
+// Ref: https://css-tricks.com/using-css-transitions-auto-dimensions/#technique-2-transform-scaley
+
 #archive-toggler {
 	img {
 		transition: transform 0.25s ease;
