--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -14,7 +14,7 @@
       </h3>
     <% end %>
     <% if @bookings.size.positive? %>
-      <p class="subtitle m-0 textSm"><%= pluralize @today_booked_profiles.size, "booking" %> across <%= pluralize @today_booked_profiles.distinct.count("profiles.id"), "freelancer" %></p>
+      <p class="subtitle m-0 textSm"><%= pluralize @bookings.size, "booking" %> across <%= pluralize @today_booked_profiles.distinct.count("profiles.id"), "freelancer" %></p>
     <% end %>
 
     <% if @bookings_count.positive? %>
