--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -9,12 +9,12 @@
     <% if @bookings_count.positive? %>
       <h3 class="mt-0 mb-1 textMd">Bookings</h3>
     <% else %>
-    <h3 class="mt-0 mb-4 textMd textBlue">
+      <h3 class="mt-0 mb-4 textMd textBlue">
         Your current bookings will appear here
       </h3>
     <% end %>
-    <% if @bookings.size.positive? %>
-      <p class="subtitle m-0 textSm"><%= pluralize @bookings.size, "booking" %> across <%= pluralize @today_booked_profiles.distinct.count("profiles.id"), "freelancer" %></p>
+    <% if @today_booked_profiles.size.positive? %>
+      <p class="subtitle m-0 textSm"><%= pluralize @today_booked_profiles.size, "booking" %> across <%= pluralize @today_booked_profiles.distinct.count("profiles.id"), "freelancer" %></p>
     <% end %>
 
     <% if @bookings_count.positive? %>
@@ -94,10 +94,11 @@
             <%= image_tag job.company.logo.service_url, class: "avatar small avatar-circle", alt: "Company's picture" %>
           <% end %>
           <div class="ml-2">
-            <h4 class="m-0"><%= job.profession %></h4>
-            <p class="subtitle m-0"><%= pluralize(job.job_applications.size, "applicant") %></p>
+            <h4 class="m-0 textBetween"><%= job.profession %></h4>
+            <p class="textSm m-0"><%= pluralize(job.job_applications.size, "applicant") %></p>
           </div>
         </div>
+        <%= image_tag "icons/dashboard-chevron-right.svg", alt: "job #{job.id}", width: 12, height: 12 %>
       <% end %>
     <% end %>
 
