--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,23 @@
-<h2>Change your password</h2>
+<div class="login-page">
 
+
+
+  <h1 class="text-center textLg mb-5">Forgot password</h1>
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <%= f.hidden_field :reset_password_token %>
+    <div class="mx-3">
+      <div class="flex mb-3">
+        <%= f.password_field :password, autofocus: true, autocomplete: "new-password", placeholder: "Enter new password", class: "w-100" %>
+      </div>
+      <div class="flex mb-3">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Re-enter new password", class: "w-100" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
+      <div class="my-3">
+        <%= f.submit "SAVE & SIGN IN", class: "btn btn-primary w-100 py-3 height-unset textMd" %>
+      </div>
+    </div>
+  <% end %>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
