--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,29 @@
-<h2>Forgot your password?</h2>
+<div class="login-page">
+  <div class="flex items-center justify-content-between p-3 mb-5">
+    <%= link_to root_path do %>
+      <%= image_tag "icons/left-arrow.svg", width: 24, height: 24, alt: "back link", class: "mt-3" %>
+    <% end %>
+    <div style="width: 32px"></div>
+    <div style="width: 32px"></div>
+  </div>
 
+
+  <h1 class="text-center textLg mb-5">Forgot password</h1>
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="mx-3">
+      <div class="flex mb-3">
+        <%= f.email_field :email, autofocus: true,
+                          autocomplete: "email",
+                          class: "w-100 bg-white py-3 textMd lg w-100",
+                          wrapper_html: { class: "w-100"},
+                          placeholder: "Email" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <div class="my-3">
+        <%= f.submit "Send me reset password instructions", class: "btn btn-primary w-100 py-3 height-unset textMd" %>
+      </div>
+    </div>
+  <% end %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
