--- a/app/assets/stylesheets/components/profile_tabs.scss
+++ b/app/assets/stylesheets/components/profile_tabs.scss
@@ -10,7 +10,8 @@
 			.justify-content-center,
 			.h-100,
 			.flex,
-			.items-center;
+			.items-center,
+			.border-box;
 		transition: ease 0.5s;
 
 		&.active {
