--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -5,6 +5,10 @@
 	box-shadow: 0px 6px 10px rgba(50, 51, 94, 0.15);
 	position: relative;
 
+	.content {
+		user-select: unset !important;
+	}
+
 	&.right {
 		padding: 4px 0 4px 8px;
 		background: #cacffb;
