--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -14,6 +14,14 @@ $day-border: 1px solid #e8e9eb;
 			}
 		}
 
+		#show-advanced {
+			transition: color 0.2s ease;
+
+			&.active {
+				color: rgba(20, 15, 38, 0.5) !important;
+			}
+		}
+
 		.filter-overlay {
 			@extend .bg-white;
 
