Booking#status input border-radius

--- a/app/assets/stylesheets/components/_tom_select.scss
+++ b/app/assets/stylesheets/components/_tom_select.scss
@@ -1,5 +1,5 @@
 .items.ts-input {
-	@extend .py-0, .px-2, .flex, .items-center;
+	@extend .py-0, .px-2, .flex, .items-center, .rounded;
 
 	background: $blueish-gray !important;
 	border: 0;
