--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -25,6 +25,7 @@ $day-border: 1px solid #e8e9eb;
 		.filter-overlay {
 			@extend .bg-white;
 
+			padding-top: calc(#{$spacing-3} + #{$spacing-4});
 			position: fixed;
 			width: 100%;
 			height: 100vh;
