--- a/app/assets/stylesheets/components/_tom_select.scss
+++ b/app/assets/stylesheets/components/_tom_select.scss
@@ -13,5 +13,9 @@
 		padding-left: calc(#{$base-spacing} + 2px);
 		padding-right: calc(#{$base-spacing} + 2px);
 		background: white !important;
+
+		a.remove {
+			border-left: none;
+		}
 	}
 }
