--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -66,7 +66,7 @@
       <%= link_to "View all (#{@bookings.size})", bookings_path, class: "btn btn-primary text-center mx-2 mb-2" %>
     <% else %>
       <% if current_user.manager.network.empty? %>
-        <%= link_to "Connect with freelancers", profiles_path(all: true), class: "btn btn-primary text-center mb-2" %>
+        <%= link_to "Add freelancers", profiles_path(all: true), class: "btn btn-primary text-center mb-2" %>
       <% else %>
         <%= link_to "Make a booking", new_profile_booking_path("no_profile", select: true), class: "btn btn-primary text-center mb-2" %>
 
